--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
+  --spacing-64: 16rem;
   --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -252,8 +253,8 @@ a:focus {
 
 .global-wrapper {
   margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
+  max-width: var(--maxWidth-full);
+  padding: var(--spacing-0) var(--spacing-64);
 }
 
 .global-wrapper[data-is-root-path="true"] .bio {
@@ -327,6 +328,14 @@ a:focus {
 
 .gatsby-highlight {
   margin-bottom: var(--spacing-8);
+}
+
+.card {
+  border-radius: 7px !important;
+}
+
+img {
+  border-radius: 7px 7px !important;
 }
 
 /* Media queries */
