--- a/src/style.css
+++ b/src/style.css
@@ -191,8 +191,7 @@ ol {
 
 ul li,
 ol li {
-  padding-left: var(--spacing-8) !important;
-  margin-bottom: calc(var(--spacing-8) / 2);
+  font-family: var(--font-heading);
 }
 
 li > p {
