--- a/src/style.css
+++ b/src/style.css
@@ -262,7 +262,7 @@ a:focus {
 }
 
 .global-header {
-  margin-bottom: var(--spacing-12);
+  margin-bottom: var(--spacing-0);
 }
 
 .main-heading {
@@ -334,7 +334,7 @@ a:focus {
   border-radius: 7px !important;
 }
 
-img {
+.img-raduis {
   border-radius: 7px 7px 0 0 !important;
 }
 
